<resources>
    <string name="app_name">ProjectMoprog</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_name_hint">Input Your Name Here</string>
    <string name="login_password_hint">Input Your Password</string>
    <string name="pager_menu_home">Home</string>
    <string name="pager_menu_teams">Teams</string>
    <string name="pager_menu_schedule">Schedule</string>
    <string name="pager_menu_profile">Profile</string>
    <string name="login_password_hintConfirm">Confirm password</string>
    <string name="email_register_hint">Input Email</string>
    <string name="register_name_hint">Input Username</string>
    <string name="register_password_hint">Input Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>