<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.mobile_prog.team_planner.RegisterActivity">

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="188dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="22dp"
        android:hint="@string/email_register_hint"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name_hint"
        android:inputType="text"
        android:layout_marginHorizontal="22dp"
        android:padding="20dp"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"

        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_marginHorizontal="22dp"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/login_password_hintConfirm"

        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_marginHorizontal="22dp"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/primary"
        android:padding="20dp"
        android:text="register" />


</LinearLayout>